--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -1,8 +1,8 @@
 name: Dev Unit test
 on:
-  push:
-    branches:
-      - "dev"
+  # push:
+  #   branches:
+  #     - "dev"
   pull_request:
     branches:
       - "dev"
