--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     image: 'mariadb:10'
     restart: always
     ports:
-      - "${FORWARD_DB_PORT:-3306}:3306"
+      - "${DB_PORT:-3306}:3306"
     environment:
       MYSQL_ROOT_HOST: "%"
       MYSQL_DATABASE: "${DB_NAME}"
